<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voice_mode" />

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin_horizontal"
            android:text="@string/music_mode" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margin_vertical"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language" />

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnGraphics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin_horizontal"
            android:text="@string/scaling_option" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margin_vertical"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controls" />

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin_horizontal"
            android:text="@string/about" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margin_vertical"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </TableRow>

</TableLayout>