<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game" />

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin_horizontal"
            android:text="@string/continue_" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margin_vertical"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_game" />

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin_horizontal"
            android:text="@string/settings" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margin_vertical"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_game" />

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin_horizontal"
            android:text="@string/tutorial" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_margin_vertical"
        android:gravity="center" >

        <org.iphsoft.simon1.ui.ExtendedImageButton
            android:id="@+id/btnAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ad_simon2" />

        <org.iphsoft.simon1.ui.ExtendedButton
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/menu_margin_horizontal"
            android:text="@string/exit_button" />
    </TableRow>

</TableLayout>