<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal" >

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imgMojotouch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mojotouch_logo" />

                    <TextView
                        android:id="@+id/txtAbout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about1"
                        android:textColor="@color/text_default"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtAbout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="placeholder"
                        android:textColor="@color/text_default"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtAbout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about3"
                        android:textColor="@color/text_default"
                        android:textSize="14dp" />

                    <ImageView
                        android:id="@+id/imgScummVM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/scummvm_logo" />

                    <TextView
                        android:id="@+id/txtAbout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about4"
                        android:textColor="@color/text_default"
                        android:textSize="14dp" />

                    <ImageView
                        android:id="@+id/imgWoodcock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/james_woodcock_logo" />

                    <TextView
                        android:id="@+id/txtAbout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about5"
                        android:textColor="@color/text_default"
                        android:textSize="14dp" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/lowerButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <org.iphsoft.simon1.ui.ExtendedButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/back" />

                <View android:id="@+id/fillerView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <org.iphsoft.simon1.ui.ExtendedButton
                    android:id="@+id/btnRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/rate_us" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2" />

</LinearLayout>