<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/scroll_popup" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <org.iphsoft.simon1.ui.ExtendedTextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="DIALOG"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/layoutButtons"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal" >

                <org.iphsoft.simon1.ui.ExtendedButton
                    android:id="@+id/btnRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/ok" />

               
                <View
                    android:id="@+id/fillerView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <org.iphsoft.simon1.ui.ExtendedButton
                    android:id="@+id/btnRateLater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/cancel" />
            </LinearLayout>

            <org.iphsoft.simon1.ui.ExtendedButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/rate_cancel" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>