<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal" >

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <include
                android:id="@+id/subtitle_view"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/menu_margin_vertical"
                layout="@layout/game_menu_sub_title" />

            <org.iphsoft.simon1.ui.ExtendedTextView
                android:id="@+id/upperText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/expansion_downloader_upper_text"
                android:textColor="@color/text_default"
                android:textSize="@dimen/title_text_size" />

            <org.iphsoft.simon1.ui.ExtendedTextView
                android:id="@+id/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="0 MB / 0 MB"
                android:textColor="@color/text_default"
                android:textSize="14dp" />

            <org.iphsoft.simon1.ui.BetterProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <org.iphsoft.simon1.ui.ExtendedButton
                    android:id="@+id/pauseButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_button_pause" />
                <View
                    android:id="@+id/fillerView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                 <org.iphsoft.simon1.ui.ExtendedButton
                    android:id="@+id/tutorialButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tutorial" android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>